--- a/06-15/index.html
+++ b/06-15/index.html
@@ -10,20 +10,27 @@
 </head>
 
 <body>
-
+  <!-- imagen de fondo fija que cubre pantalla -->
   <div class="parallax"></div>
+  <!-- imagen de fondo que se mueve y además contiene elementos cargados por Vue -->
   <div class="paralelo">
+    <br>
+    <br>
+    <br>
+    <!-- ID para identificar la app en Vue.js -->
     <div id="app">
-      <br>
-      <br>
-      <br>
+      <!-- donde aparece el mensaje -->
       <h1>{{ message }}</h1>
+      <!-- llamada al métdo para variar el mensaje -->
       <button v-on:click="reverseMessage">Mezcla el mensage</button>
     </div>
   </div>
+  <!-- imagen de fondo fija que cubre pantalla -->
   <div class="para"></div>
 
+<!-- carga Vue.js vía CDN-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script>
+  <!-- carga script local con la app creada en Vue -->
   <script src="js/app.js" type="text/javascript">
   </script>
 </body>
